--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "effectivepc",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/themes": "^3.1.3",
     "next": "14.2.11",
     "react": "18",
     "react-dom": "18",
