--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "react-icons": "5.3.0",
     "tailwindcss": "3.4.1",
     "typescript": "5"
-  }
+  },
+  "homepage": "",
+  "description": "Source: Homepage of Effective PC",
+  "keywords": []
 }
