--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@radix-ui/themes": "^3.1.3",
+    "@types/aos": "^3.0.7",
+    "aos": "^2.3.4",
+    "lenis": "^1.1.14",
     "next": "14.2.11",
     "react": "18",
     "react-dom": "18",
